# Sample-API-Data-Scraper

./: README.md  database.py  main.py  models.py  pyproject.toml  run_scrapy.bat  run_scrapy.sh  shcemas.py
code_resources/: scrapy.cfg
code_resources/code_resources/: database.py  pipelines.py  settings.py
code_resources/code_resources/spiders/: coding_resources_spider.py
tests/: test_http.py  test_scrapy.py
