[tool.poetry]
name = "sample-api-data-scraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
scrapy = "^2.12.0"
pytest = "^8.3.3"
httpx = "^0.27.2"
pytest-mock = "^3.14.0"
watchgod = "^0.8.2"
uvicorn = "^0.32.0"
pymongo = "^4.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
